Todo yapısı hem arayüze hem de storage içerisine eklendi ayrıca hata mesajları için fonksiyonlar oluşturuldu

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                     <h5 class="card-title">Todo List Sayfası </h5>
                 </div>
                 <div class="card-body">
-                    <form id="todoAddForm mt-2">
+                    <form id="todoAddForm" class="mt-2">
                         <input type="text" class="form-control mt-2" id="todoName" aria-describedby="todo" placeholder="Todo Giriniz">
-                    
                         <button id="todoAddButton" type="submit"  class="btn btn-primary mt-4 btn-sm">Todo Ekleyin</button>
                     </form>
+                    <hr/>
                 </div>
                 <hr/>
                 <div class="card-body">
@@ -31,13 +31,8 @@
                         <hr/>
                     </form>
                     <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between">Todo 1
-                            <a href="#" class="delete-item">
-                                <i class="fa fa-remove"></i>
-                            </a>
-                        </li>             
                       </ul>
-                      <a href="#" id="todoClearButton"  class="btn btn-primary btn-sm mt-3">Tüm Todoları Temizle</a>
+                      <a href="#" id="clearButton"  class="btn btn-primary btn-sm mt-3">Tüm Todoları Temizle</a>
                 </div>
             </div>
         </div>
